--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- ヒーローセクション -->
   <section class="hero">
     <div class="hero-video-container">
-      <video id="bg-video" autoplay loop muted playsinline>
+      <video id="bg-video" autoplay loop muted playsinline preload="none" poster="picmov/sea.png">
         <source src="picmov/hero-movie.mp4" type="video/mp4">
       </video>
     </div>
