--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
           <li>強度行動障害支援者養成研修（基礎/実践）</li>
           <li>医療的ケア児等コーディネーター養成研修</li>
           <li>精神障がい者支援の障がい特性と支援技法研修</li>
+          <li>高次脳機能障害支援者養成に関する研修</li>
         </ul>
       </div>
 
